<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <PreferenceCategory app:title="@string/app_behavior"
        app:iconSpaceReserved="false">
        <me.timschneeberger.rootlessjamesdsp.preference.MaterialSwitchPreference
            app:key="@string/key_exclude_app_from_recents"
            app:title="@string/exclude_app_from_recents"
            app:defaultValue="@bool/default_exclude_app_from_recents"
            app:summaryOff="@string/exclude_app_from_recents_off"
            app:summaryOn="@string/exclude_app_from_recents_on"
            app:iconSpaceReserved="false" />
        <me.timschneeberger.rootlessjamesdsp.preference.MaterialSwitchPreference
            app:key="@string/key_autostart_prompt_at_boot"
            app:title="@string/autostart_prompt_at_boot"
            app:defaultValue="@bool/default_autostart_prompt_at_boot"
            app:summaryOff="@string/autostart_prompt_at_boot_off"
            app:summaryOn="@string/autostart_prompt_at_boot_on"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/assets"
        app:iconSpaceReserved="false">
        <Preference
            android:key="@string/key_troubleshooting_repair_assets"
            android:title="@string/troubleshooting_repair_assets"
            android:summary="@string/troubleshooting_repair_assets_summary"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/misc_permission_header"
        app:iconSpaceReserved="false">
        <me.timschneeberger.rootlessjamesdsp.preference.IconPreference
            android:key="@string/key_misc_permission_skip_prompt"
            android:title="@string/misc_permission_skip_prompt"
            tools:icon="@drawable/ic_twotone_check_circle_24dp"
            android:enabled="false"
            tools:summary="@string/permission_allowed"
            app:iconSpaceReserved="false" />
        <me.timschneeberger.rootlessjamesdsp.preference.IconPreference
            android:key="@string/key_misc_permission_auto_start"
            android:title="@string/misc_permission_auto_start"
            tools:icon="@drawable/ic_twotone_error_24dp"
            android:enabled="false"
            tools:summary="@string/permission_not_allowed"
            app:iconSpaceReserved="false" />
        <Preference
            android:key="@string/key_misc_permission_restart_setup"
            android:title="@string/misc_permission_restart_setup"
            android:summary="@string/misc_permission_restart_setup_summary"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/network_services"
        app:iconSpaceReserved="false">
        <EditTextPreference
            android:key="@string/key_network_autoeq_api_url"
            android:title="@string/network_autoeq_api_url"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="@string/default_network_autoeq_api_url"
            android:inputType="textUri"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/privacy"
        app:iconSpaceReserved="false">
        <me.timschneeberger.rootlessjamesdsp.preference.MaterialSwitchPreference
            android:key="@string/key_share_crash_reports"
            android:defaultValue="@bool/default_share_crash_reports"
            android:title="@string/privacy_share_crash_reports"
            android:summaryOn="@string/privacy_share_crash_reports_on"
            android:summaryOff="@string/privacy_share_crash_reports_off"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>
</PreferenceScreen>