<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <me.timschneeberger.rootlessjamesdsp.preference.AppIconPreference
        app:selectable="false"
        app:iconSpaceReserved="false"
        app:allowDividerBelow="true" />

    <Preference
        android:title="@string/credits_version"
        android:summary="x.x.x"
        android:key="@string/key_credits_version"
        android:icon="@drawable/ic_twotone_history_24dp"
        app:allowDividerAbove="true" />

    <Preference
        android:title="@string/credits_build_info"
        android:summary="@string/value_not_set"
        android:icon="@drawable/ic_twotone_info_24dp"
        android:key="@string/key_credits_build_info" />

    <Preference
        android:title="@string/credits_project_page"
        android:summary="@string/credits_project_page_summary"
        android:icon="@drawable/ic_baseline_github_24dp">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://github.com/thepbone/RootlessJamesDSP" />
    </Preference>

    <Preference
        android:key="@string/key_credits_google_play"
        android:title="@string/credits_project_play_page"
        android:summary="@string/credits_project_play_page_summary"
        android:icon="@drawable/ic_baseline_google_play_24dp">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://play.google.com/store/apps/details?id=me.timschneeberger.rootlessjamesdsp" />
    </Preference>

    <Preference
        android:key="@string/key_credits_check_update"
        android:title="@string/credits_project_check_update"
        android:summary="@string/credits_project_check_update_summary"
        android:icon="@drawable/ic_twotone_download_24">
    </Preference>

    <Preference
        android:title="@string/credits_project_translate"
        android:summary="@string/credits_project_translate_summary"
        android:icon="@drawable/ic_twotone_translate_24dp">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://crowdin.com/project/rootlessjamesdsp" />
    </Preference>

    <PreferenceCategory
    app:title="@string/credits"
    app:iconSpaceReserved="false">
    <Preference
        android:title="@string/credits_app"
        android:summary="Tim Schneeberger (@thepbone)"
        app:iconSpaceReserved="false">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://github.com/thepbone" />
    </Preference>
    <Preference
        android:title="@string/credits_dsp"
        android:summary="James Fung (@james34602)"
        app:iconSpaceReserved="false">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://github.com/james34602" />
    </Preference>

    <PreferenceCategory
        android:key="@string/key_translators"
        app:title="@string/translators"
        app:iconSpaceReserved="false" />

</PreferenceCategory>
</PreferenceScreen>