<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/text_run"
        android:icon="@drawable/ic_baseline_play_arrow_24dp"
        android:title="@string/editor_run"
        android:orderInCategory="0"
        app:showAsAction="always" />

    <item
        android:id="@+id/text_undo"
        android:icon="@drawable/ic_baseline_undo_24dp"
        android:title="@string/undo"
        android:orderInCategory="1"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/text_redo"
        android:icon="@drawable/ic_baseline_redo_24dp"
        android:title="@string/redo"
        android:orderInCategory="2"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/text_save"
        android:icon="@drawable/ic_twotone_save_24dp"
        android:title="@string/editor_save"
        android:orderInCategory="4" />

    <item
        android:id="@+id/findMenu"
        android:icon="@drawable/ic_twotone_find_in_page_24dp"
        android:orderInCategory="6"
        android:title="@string/editor_find_and_replace" />

</menu>